--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
 </div>
 </div></div></div>
 <div class="section profile-footer"><div class="section-container"><div class="footer-wrapper">
-<a href="index.html" class="brand footerbrand w-inline-block"><img src="cdx_subdomain/images/logo/solo-icon.svg" width="170" class="footer-brand-image">solo.to</a>
-<a href="index.html" class="footer-link w-inline-block">create page</a>
+Design: <a href="https://solo.to/" class="brand footerbrand w-inline-block">solo.to</a>
+<a href="https://discord.gg/rXcf3pt3q3" class="footer-link w-inline-block">Join my Discord</a>
 </div></div></div>
 </div>
 <script src="js/page.js"></script>
