--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 </div></div></div>
 <div class="section profile-footer"><div class="section-container"><div class="footer-wrapper">
 <a href="https://discord.gg/rXcf3pt3q3" class="footer-link w-inline-block">Join my Discord</a>
-<p class="brand footerbrand w-inline-block">Design: <a href="https://solo.to/">solo.to</a></p>
+<p class="brand footerbrand w-inline-block">Design:<a href="https://solo.to/" class="brand footerbrand w-inline-block"> solo.to</a></p>
 </div></div></div>
 </div>
 <script src="js/page.js"></script>
