--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-<title>LightningBolt (@lightningbolt) · solo.to</title>
-<meta property="og:title" content="LightningBolt (@lightningbolt) · solo.to">
+<title>LightningBolt</title>
+<meta property="og:title" content="LightningBolt">
 <meta name="description" content="Bangladesh · I solemnly swear that I am up to no good.">
 <meta property="og:description" content="Bangladesh · I solemnly swear that I am up to no good.">
 <meta property="og:image" content="cdx_subdomain/user/a/61a11f71e473d5_87753577.jpg">
