--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 <title>LightningBolt</title>
 <meta property="og:title" content="LightningBolt">
 <meta name="description" content="Bangladesh · I solemnly swear that I am up to no good.">
@@ -113,7 +113,7 @@
 </div>
 </div></div></div>
 <div class="section profile-footer"><div class="section-container"><div class="footer-wrapper">
-<p class="footer-link w-inline-block">Design:&nbsp<a href="https://solo.to/" class="footer-link w-inline-block">solo.to</a></p>
+<p class="footer-link w-inline-block">Design: <a href="https://solo.to/" class="footer-link w-inline-block">solo.to</a></p>
 </div></div></div>
 </div>
 <script src="js/page.js"></script>
