--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
 <meta property="og:image" content="cdx_subdomain/user/a/61a11f71e473d5_87753577.jpg">
 <meta name="twitter:card" content="summary">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="csrf-token" content="i7EJj787IevfEe3QaJGy6mDntsMLGsvKe7aafQyW">
 <meta name="theme-color" content="#288DE8">
-<link href="cdx_subdomain/images/logo/solo-favicon.png" rel="shortcut icon" type="image/x-icon">
-<link href="cdx_subdomain/images/logo/solo-webclip.png" rel="apple-touch-icon">
+<link href="cdx_subdomain/user/a/61a11f71e473d5_87753577.jpg" rel="shortcut icon" type="image/x-icon">
+<link href="cdx_subdomain/user/a/61a11f71e473d5_87753577.jpg" rel="apple-touch-icon">
 <link href="css/vendor.css" rel="stylesheet" type="text/css">
 <link href="css/app.css" rel="stylesheet" type="text/css">
 <link href="css/page.css" rel="stylesheet" type="text/css">
