--- a/index.html
+++ b/index.html
@@ -2,12 +2,27 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+<!-- Name, description etc in meta tags -->
+<!-- Primary Meta Tags -->
 <title>LightningBolt</title>
+<meta name="title" content="LightningBolt">
+<meta name="description" content="Just your average 14 y/o kid">
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://lightningbolt.gq/">
 <meta property="og:title" content="LightningBolt">
-<meta name="description" content="Bangladesh · I solemnly swear that I am up to no good.">
-<meta property="og:description" content="Bangladesh · I solemnly swear that I am up to no good.">
+<meta property="og:description" content="Just your average 14 y/o kid">
 <meta property="og:image" content="cdx_subdomain/user/a/61a11f71e473d5_87753577.jpg">
-<meta name="twitter:card" content="summary">
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="https://lightningbolt.gq/">
+<meta property="twitter:title" content="LightningBolt">
+<meta property="twitter:description" content="Just your average 14 y/o kid">
+<meta property="twitter:image" content="cdx_subdomain/user/a/61a11f71e473d5_87753577.jpg">
+<!-- -->
+
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="theme-color" content="#288DE8">
 <link href="cdx_subdomain/user/a/61a11f71e473d5_87753577.jpg" rel="shortcut icon" type="image/x-icon">
