--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 </div>
 </div></div></div>
 <div class="section profile-footer"><div class="section-container"><div class="footer-wrapper">
-<a href="https://solo.to/" class="footer-link w-inline-block">Design: solo.to</a>
+<a href="https://solo.to/" target= "_blank" class="footer-link w-inline-block">Design: solo.to</a>
 </div></div></div>
 </div>
 <script src="js/page.js"></script>
