--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <div class="slice-div slice-div-large"></div>
 </div>
 <div class="section info-card"><div class="section-container"><div class="profile-info-wrapper">
-<div class="profile-info-top-wrapper"><div class="profile-image-wrapper"><img src="cdx_subdomain/user/a/61a11f71e473d5_87753577.jpg" class="profile-image"></div></div>
+<div class="profile-info-top-wrapper"><div class="profile-image-wrapper"><img src="cdx_subdomain/images/Avatar.jpg" alt="LightningBolt Avatar" class="profile-image"></div></div>
 <div class="profile-info-bottom-wrapper">
 <div class="profile-name-wrapper">
 <h1 class="profile-name">LightningBolt</h1>
