--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
 </div>
 <div class="link-item-wrapper">
 <a href="https://en.pronouns.page/@LightningBolt" id="MjQzOTY1OA" class="link-button w-inline-block">
-<div class="link-icon-float" style="box-shadow:0 8px 14px -4px rgba(255, 255, 255, 1)">
-<div class="link-icon-float-bg" style="background-color:#fffff;"></div>
+<div class="link-icon-float" style="box-shadow:0 8px 14px -4px rgba(199,21,133,255)">
+<div class="link-icon-float-bg" style="background-color:#c71585;"></div>
 <img src="cdx_subdomain/images/link/pronounspage.svg" class="link-icon-float-image link-icon-float-image">
 </div>
 <div class="link-block-text-wrapper">
