--- a/index.html
+++ b/index.html
@@ -114,12 +114,13 @@
 </div>
 <div class="link-item-wrapper">
 <a href="https://en.pronouns.page/@LightningBolt" id="MjQzOTY1OA" class="link-button w-inline-block">
-<div class="link-icon-float" style="box-shadow:0 8px 14px -4px rgba(199,21,133,255)">
-<div class="link-icon-float-bg" style="background-color:#c71585;"></div>
+<div class="link-icon-float" style="box-shadow:0 8px 14px -4px rgba(216,93,170,255)
+">
+<div class="link-icon-float-bg" style="background-color:#d85daa;"></div>
 <img src="cdx_subdomain/images/link/pronounspage.svg" class="link-icon-float-image link-icon-float-image">
 </div>
 <div class="link-block-text-wrapper">
-<div class="link-name">Pronouns page</div>
+<div class="link-name">Pronouns.page</div>
 <div class="link-url">en.pronouns.page/@LightningBolt</div>
 </div>
 <div class="link-arrow-wrapper"><img src="cdx_subdomain/images/link-button-arrow.svg" class="link-arrows"></div>
