--- a/index.html
+++ b/index.html
@@ -114,9 +114,8 @@
 </div>
 <div class="link-item-wrapper">
 <a href="https://en.pronouns.page/@LightningBolt" id="MjQzOTY1OA" class="link-button w-inline-block">
-<div class="link-icon-float" style="box-shadow:0 8px 14px -4px rgba(216,93,170,255)
-">
-<div class="link-icon-float-bg" style="background-color:#d85daa;"></div>
+<div class="link-icon-float" style="box-shadow:0 8px 14px -4px rgba(228,144,197,255)">
+<div class="link-icon-float-bg" style="background-color:#e490c5;"></div>
 <img src="cdx_subdomain/images/link/pronounspage.svg" class="link-icon-float-image link-icon-float-image">
 </div>
 <div class="link-block-text-wrapper">
