--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </div></div></div>
 <div class="section link-section"><div class="section-container"><div class="profile-link-wrapper">
 <div class="link-item-wrapper">
-<a href="https://discord.gg/rXcf3pt3q3" id="MjM4MDcyMA" class="link-button w-inline-block">
+<a href="https://discord.gg/rXcf3pt3q3" target= "_blank" id="MjM4MDcyMA" class="link-button w-inline-block">
 <div class="link-icon-float" style="box-shadow:0 8px 14px -4px rgba(88,101,242,0.65)">
 <img src="cdx_subdomain/images/link/discord.svg" class="link-icon-float-image">
 </div>
