--- a/index.html
+++ b/index.html
@@ -1,32 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-<!-- Name, description etc in meta tags -->
-<!-- Primary Meta Tags -->
-<title>LightningBolt</title>
-<meta name="title" content="LightningBolt">
-<meta name="description" content="Just your average 14 y/o kid">
-
-<!-- Open Graph / Facebook -->
-<meta property="og:type" content="website">
-<meta property="og:url" content="https://lightningbolt.gq/">
-<meta property="og:title" content="LightningBolt">
-<meta property="og:description" content="Just your average 14 y/o kid">
-<meta property="og:image" content="cdx_subdomain/images/Avatar.jpg">
-
-<!-- Twitter -->
-<meta property="twitter:card" content="summary_large_image">
-<meta property="twitter:url" content="https://lightningbolt.gq/">
-<meta property="twitter:title" content="LightningBolt">
-<meta property="twitter:description" content="Just your average 14 y/o kid">
-<meta property="twitter:image" content="cdx_subdomain/images/Avatar.jpg">
-<!-- -->
-
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+<title>LightningBolt (@lightningbolt) · solo.to</title>
+<meta property="og:title" content="LightningBolt (@lightningbolt) · solo.to">
+<meta name="description" content="Bangladesh · I solemnly swear that I am up to no good.">
+<meta property="og:description" content="Bangladesh · I solemnly swear that I am up to no good.">
+<meta property="og:image" content="cdx_subdomain/user/a/61a11f71e473d5_87753577.jpg">
+<meta name="twitter:card" content="summary">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="csrf-token" content="i7EJj787IevfEe3QaJGy6mDntsMLGsvKe7aafQyW">
 <meta name="theme-color" content="#288DE8">
-<link href="cdx_subdomain/images/Avatar.jpg" rel="shortcut icon" type="image/x-icon">
-<link href="cdx_subdomain/images/Avatar.jpg" rel="apple-touch-icon">
+<link href="cdx_subdomain/images/logo/solo-favicon.png" rel="shortcut icon" type="image/x-icon">
+<link href="cdx_subdomain/images/logo/solo-webclip.png" rel="apple-touch-icon">
 <link href="css/vendor.css" rel="stylesheet" type="text/css">
 <link href="css/app.css" rel="stylesheet" type="text/css">
 <link href="css/page.css" rel="stylesheet" type="text/css">
@@ -38,7 +24,7 @@
 <div class="slice-div slice-div-large"></div>
 </div>
 <div class="section info-card"><div class="section-container"><div class="profile-info-wrapper">
-<div class="profile-info-top-wrapper"><div class="profile-image-wrapper"><img src="cdx_subdomain/images/Avatar.jpg" alt="LightningBolt Avatar" class="profile-image"></div></div>
+<div class="profile-info-top-wrapper"><div class="profile-image-wrapper"><img src="cdx_subdomain/user/a/61a11f71e473d5_87753577.jpg" class="profile-image"></div></div>
 <div class="profile-info-bottom-wrapper">
 <div class="profile-name-wrapper">
 <h1 class="profile-name">LightningBolt</h1>
@@ -52,7 +38,7 @@
 </div></div></div>
 <div class="section link-section"><div class="section-container"><div class="profile-link-wrapper">
 <div class="link-item-wrapper">
-<a href="https://discord.gg/rXcf3pt3q3" target= "_blank" id="MjM4MDcyMA" class="link-button w-inline-block">
+<a href="https://discord.gg/rXcf3pt3q3" id="MjM4MDcyMA" class="link-button w-inline-block">
 <div class="link-icon-float" style="box-shadow:0 8px 14px -4px rgba(88,101,242,0.65)">
 <img src="cdx_subdomain/images/link/discord.svg" class="link-icon-float-image">
 </div>
@@ -103,7 +89,7 @@
 <a href="https://discordrep.com/u/733232145304125540#" id="MjQ1MTI4Ng" class="link-button w-inline-block">
 <div class="link-icon-float" style="box-shadow:0 8px 14px -4px rgba(40,141,232,0.65)">
 <div class="link-icon-float-bg" style="background-color:#288DE8;"></div>
-<img src="cdx_subdomain/images/link/discordrep.svg" class="link-icon-float-image link-icon-float-image">
+<img src="cdx_subdomain/images/link/icon.svg" class="link-icon-float-image link-icon-float-image-invert">
 </div>
 <div class="link-block-text-wrapper">
 <div class="link-name">DiscordRep</div>
@@ -114,12 +100,12 @@
 </div>
 <div class="link-item-wrapper">
 <a href="https://en.pronouns.page/@LightningBolt" id="MjQzOTY1OA" class="link-button w-inline-block">
-<div class="link-icon-float" style="box-shadow:0 8px 14px -4px rgba(228,144,197,255)">
-<div class="link-icon-float-bg" style="background-color:#e490c5;"></div>
-<img src="cdx_subdomain/images/link/pronounspage.svg" class="link-icon-float-image link-icon-float-image">
+<div class="link-icon-float" style="box-shadow:0 8px 14px -4px rgba(40,141,232,0.65)">
+<div class="link-icon-float-bg" style="background-color:#288DE8;"></div>
+<img src="cdx_subdomain/images/link/icon.svg" class="link-icon-float-image link-icon-float-image-invert">
 </div>
 <div class="link-block-text-wrapper">
-<div class="link-name">Pronouns.page</div>
+<div class="link-name">Pronouns page</div>
 <div class="link-url">en.pronouns.page/@LightningBolt</div>
 </div>
 <div class="link-arrow-wrapper"><img src="cdx_subdomain/images/link-button-arrow.svg" class="link-arrows"></div>
@@ -127,7 +113,8 @@
 </div>
 </div></div></div>
 <div class="section profile-footer"><div class="section-container"><div class="footer-wrapper">
-<a href="https://solo.to/" target= "_blank" class="footer-link w-inline-block">Design: solo.to</a>
+<a href="index.html" class="brand footerbrand w-inline-block"><img src="cdx_subdomain/images/logo/solo-icon.svg" width="170" class="footer-brand-image">solo.to</a>
+<a href="index.html" class="footer-link w-inline-block">create page</a>
 </div></div></div>
 </div>
 <script src="js/page.js"></script>
