--- a/index.html
+++ b/index.html
@@ -127,8 +127,7 @@
 </div>
 </div></div></div>
 <div class="section profile-footer"><div class="section-container"><div class="footer-wrapper">
-<a href="index.html" class="brand footerbrand w-inline-block"><img src="cdx_subdomain/images/logo/solo-icon.svg" width="170" class="footer-brand-image">solo.to</a>
-<a href="index.html" class="footer-link w-inline-block">create page</a>
+<a href="https://solo.to/" target= "_blank" class="footer-link w-inline-block">Design: solo.to</a>
 </div></div></div>
 </div>
 <script src="js/page.js"></script>
