--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="theme-color" content="#288DE8">
-<link href="cdx_subdomain/images/logo/solo-favicon.png" rel="shortcut icon" type="image/x-icon">
-<link href="cdx_subdomain/images/logo/solo-webclip.png" rel="apple-touch-icon">
+<link href="cdx_subdomain/images/Avatar.jpg" rel="shortcut icon" type="image/x-icon">
+<link href="cdx_subdomain/images/Avatar.jpg" rel="apple-touch-icon">
 <link href="css/vendor.css" rel="stylesheet" type="text/css">
 <link href="css/app.css" rel="stylesheet" type="text/css">
 <link href="css/page.css" rel="stylesheet" type="text/css">
@@ -38,7 +38,7 @@
 <div class="slice-div slice-div-large"></div>
 </div>
 <div class="section info-card"><div class="section-container"><div class="profile-info-wrapper">
-<div class="profile-info-top-wrapper"><div class="profile-image-wrapper"><img src="cdx_subdomain/user/a/61a11f71e473d5_87753577.jpg" class="profile-image"></div></div>
+<div class="profile-info-top-wrapper"><div class="profile-image-wrapper"><img src="cdx_subdomain/images/Avatar.jpg" alt="LightningBolt Avatar" class="profile-image"></div></div>
 <div class="profile-info-bottom-wrapper">
 <div class="profile-name-wrapper">
 <h1 class="profile-name">LightningBolt</h1>
@@ -52,7 +52,7 @@
 </div></div></div>
 <div class="section link-section"><div class="section-container"><div class="profile-link-wrapper">
 <div class="link-item-wrapper">
-<a href="https://discord.gg/rXcf3pt3q3" id="MjM4MDcyMA" class="link-button w-inline-block">
+<a href="https://discord.gg/rXcf3pt3q3" target= "_blank" id="MjM4MDcyMA" class="link-button w-inline-block">
 <div class="link-icon-float" style="box-shadow:0 8px 14px -4px rgba(88,101,242,0.65)">
 <img src="cdx_subdomain/images/link/discord.svg" class="link-icon-float-image">
 </div>
@@ -103,7 +103,7 @@
 <a href="https://discordrep.com/u/733232145304125540#" id="MjQ1MTI4Ng" class="link-button w-inline-block">
 <div class="link-icon-float" style="box-shadow:0 8px 14px -4px rgba(40,141,232,0.65)">
 <div class="link-icon-float-bg" style="background-color:#288DE8;"></div>
-<img src="cdx_subdomain/images/link/icon.svg" class="link-icon-float-image link-icon-float-image-invert">
+<img src="cdx_subdomain/images/link/discordrep.svg" class="link-icon-float-image link-icon-float-image">
 </div>
 <div class="link-block-text-wrapper">
 <div class="link-name">DiscordRep</div>
@@ -114,12 +114,12 @@
 </div>
 <div class="link-item-wrapper">
 <a href="https://en.pronouns.page/@LightningBolt" id="MjQzOTY1OA" class="link-button w-inline-block">
-<div class="link-icon-float" style="box-shadow:0 8px 14px -4px rgba(40,141,232,0.65)">
-<div class="link-icon-float-bg" style="background-color:#288DE8;"></div>
-<img src="cdx_subdomain/images/link/icon.svg" class="link-icon-float-image link-icon-float-image-invert">
+<div class="link-icon-float" style="box-shadow:0 8px 14px -4px rgba(228,144,197,255)">
+<div class="link-icon-float-bg" style="background-color:#e490c5;"></div>
+<img src="cdx_subdomain/images/link/pronounspage.svg" class="link-icon-float-image link-icon-float-image">
 </div>
 <div class="link-block-text-wrapper">
-<div class="link-name">Pronouns page</div>
+<div class="link-name">Pronouns.page</div>
 <div class="link-url">en.pronouns.page/@LightningBolt</div>
 </div>
 <div class="link-arrow-wrapper"><img src="cdx_subdomain/images/link-button-arrow.svg" class="link-arrows"></div>
